# Stickcher

./: .clang-tidy  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.backup  README.md  backup-script.sh  conanfile.txt  cpp-lint.yml  cron-job  deploy.sh  docker-compose-gpu.yml  docker-compose.yml
.github/workflows/: cpp-lint.yml  deploy.yml  tests.yml
nginx/: default.conf
src/: main.cpp
src/bot/: db.hpp  handlers.hpp  init.sql  main.cpp  render.hpp  settings.hpp  states.hpp  tables.hpp  text_parser.hpp  types.hpp  utils.hpp
src/bot/bot_lib/include/bot_lib/: state.hpp
src/bot/bot_lib/include/bot_lib/handler/: callback.hpp  event.hpp
src/bot/bot_lib/include/bot_lib/state_storage/: common.hpp  memory.hpp
src/bot/db/: db.hpp  init.sql  models.hpp  pack.hpp  pack_sharing.hpp  sticker.hpp  tables.hpp
src/bot/tests/: CMakeLists.txt  test.cpp
src/bot_lib/: CMakeLists.txt  bot.hpp
src/bot_lib/include/bot_lib/: bot.hpp  chat_id_type.hpp  dependencies.hpp  handler.hpp  meta.hpp  state.hpp  tg_types.hpp
src/bot_lib/include/bot_lib/handler/: callback.hpp  event.hpp  events.hpp  handler.hpp  handler_meta.hpp  state_types.hpp  type.hpp
src/bot_lib/include/bot_lib/state_storage/: common.hpp  memory.hpp
src/scanner/: .dockerignore  Dockerfile  main.py  requirements.txt
